# mahabharat-agents

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  LICENSE  README.md  install.sh  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/masters/: abhimanyu.md  arjuna.md  ashwatthama.md  bhima.md  bhishma.md  dhrishtadyumna.md  draupadi.md  drona.md  duryodhana.md  hanuman.md  karna.md  krishna.md  nakula.md  sahadeva.md  shakuni.md  vidura.md  yudhishthira.md
context/itihasa/: README.md
context/shruti/: core-principles.md
context/smriti/: README.md
docs/: architecture.md  getting-started.md
docs/specs/: SPEC_MAHABHARAT_AGENTS_PACKAGE.md
orchestration/guardrails/: authority-matrix.md  core-principles.md  escalation-rules.md  feedback-loop.md
orchestration/topologies/: akshauhini.yaml  chakravyuha.yaml  rajya.yaml  sabha.yaml  vyuha.yaml
orchestration/workflows/: architecture-review.yaml  bug-fix.yaml  feature-development.yaml  incident-response.yaml  performance-review.yaml  security-audit.yaml
roles/: ceo.md  cto.md  data-scientist.md  devops-sre.md  principal-sde.md  product-manager.md  product-owner.md  program-manager.md  qa-engineer.md  quant-engineer.md  red-team-lead.md  security-engineer.md  senior-frontend.md  senior-sde.md  ux-designer.md
skills/role-specific/design-system/: SKILL.md
src/mahabharat_agents/: __init__.py  cli.py
tests/: test_agents.py  test_install.py  test_orchestration.py  test_skills.py
(+1 files in other folders)
